# filtertableus

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: Dependencies.cmake  PluginSetup.cmake  Warnings.cmake
core/: CMakeLists.txt
core/include/ftc/: AlignedVector.h  Convolver.h  Denormals.h  EngineConfig.h  FFT.h  FastMath.h  FilterTableEngine.h  Kernel.h  KernelGenerator.h  Modulation.h  Parameters.h  RealtimeExchange.h  ResponseCurve.h  Types.h  WavetableData.h
core/src/: convolver.cpp  engine.cpp  engine_stub.cpp  fastmath.cpp  fft.cpp  kernelgenerator.cpp  mod.cpp  mod_stub.cpp  wavetabledata.cpp
core/tests/: CMakeLists.txt  test_convolver.cpp  test_convolver_rt.cpp  test_convolver_section.cpp  test_convolver_utils.h  test_denormals.cpp  test_engine_basics.cpp  test_engine_chunking.cpp  test_engine_hostmatrix.cpp  test_engine_modeswitch.cpp  test_engine_null.cpp  test_engine_robust.cpp  test_engine_utils.h  test_engine_zipper.cpp  test_exchange.cpp  test_fastmath.cpp  test_fft.cpp  test_kernel_cyclic.cpp  test_kernel_helpers.h  test_kernel_morph.cpp  test_kernel_resonance.cpp  test_kernel_spectral.cpp  test_mod.cpp  test_wavetabledata.cpp
core/tests/helpers/: TestSignals.cpp  TestSignals.h
docs/: ARCHITECTURE.md  CALIBRATION.md  EXECUTION.md  INTERFACES.md  PLAN.md
docs/briefs/: brief-a1-convolution.md  brief-a2-kernelgen.md  brief-b-wavetable.md  brief-c-gui.md  brief-d-modstate.md  brief-e-harness.md  brief-engine.md  brief-phase0.md  brief-wave1-common.md  brief-wave3-integration.md
include/ftus/: EditorFactory.h  FactoryTables.h  LoaderService.h  PluginIDs.h  StateManager.h  WavetableCodec.h
resources/fonts/: placeholder.txt
resources/presets/factory/: 01 Analog Sweep Pad.ftpreset  02 Synced Sweep Bass.ftpreset  03 Auto Wah.ftpreset  04 Spectral Drifter.ftpreset  05 Linear Air.ftpreset  06 Raw Mangler.ftpreset  07 Comb Runner.ftpreset  08 Keytrack Formants.ftpreset  09 Random Steps.ftpreset  10 PWM Drift.ftpreset  placeholder.txt
scripts/: run_all_checks.sh  smoke_standalone.sh  validate_au.sh  validate_clap.sh  validate_vst3.sh
source/gui/: CMakeLists.txt  FtusLookAndFeel.cpp  FtusLookAndFeel.h  KnobPanel.h  LabeledKnob.h  ModPanel.cpp  ModPanel.h  PhaseModeSelector.cpp  PhaseModeSelector.h  PluginEditor.cpp  PluginEditor.h  PresetBar.cpp  PresetBar.h  SegmentButton.h  SmallKnobRow.h  SpectrumView.cpp  SpectrumView.h  Theme.h  ValueReadout.h  WaterfallView.cpp  WaterfallView.h  WavetableRow.cpp  WavetableRow.h
source/plugin/: CMakeLists.txt  Parameters.cpp  PluginProcessor.cpp  PluginProcessor.h  WavetableCodecImpl.cpp
source/state/: CMakeLists.txt  StateManagerImpl.cpp  StateManagerStub.cpp
source/wavetable/: CMakeLists.txt  FactoryGenerators.cpp  FrameOps.cpp  FrameOps.h  LoaderServiceImpl.cpp  LoaderServiceStub.cpp  SampleConverter.cpp  SampleConverter.h  WavImporter.cpp  WavImporter.h
tests/integration/: CMakeLists.txt  IntegrationTestHelpers.h  test_golden_params.cpp  test_offline_render.cpp  test_preset_audition.cpp  test_processor_smoke.cpp  test_state_roundtrip.cpp  test_table_stress.cpp  test_wave3_integration.cpp
tests/unit/state/: CMakeLists.txt  test_presets.cpp  test_state_golden.cpp  test_state_seed.cpp  test_statemanager.cpp
tests/unit/wavetable/: CMakeLists.txt  WtTestHelpers.h  test_factory_generators.cpp  test_loader_service.cpp  test_sample_converter.cpp  test_wav_importer.cpp  test_wavetable_seed.cpp
